initial version of migration

--- a/rakefile
+++ b/rakefile
@@ -1,7 +1,8 @@
 task :build do
     if File.exist? "empathy-0.0.1.gem"
-        puts "removing old gemfile"
+        puts "  Removing old gemfile"
         File.delete "empathy-0.0.1.gem"
     end
     system "gem build empathy.gemspec"
+    system "gem install empathy-0.0.1.gem"
 end
