--- a/templates/package.json
+++ b/templates/package.json
@@ -1,19 +1,24 @@
 {
-  "author" : "My Name",
-  "email" : "me@mail.com",
-  "description" : "package description",
-  "dependencies" : {
+  "author": "My Name",
+  "email": "me@mail.com",
+  "description": "package description",
+  "dependencies": {
+    "angular2": "2.0.0-beta.15",
+    "es6-shim": "^0.35.0",
+    "node-php-server": "^0.1.2",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
+    "zone.js": "0.6.10"
   },
-  "devDependencies" : {
+  "devDependencies": {
     "coffee-script": "latest",
     "gulp": "latest",
     "gulp-ruby-sass": "latest",
-    "gulp-coffee": "latest",
     "gulp-concat": "latest",
     "gulp-chmod": "latest",
     "gulp-autoprefixer": "latest",
     "gulp-minify-html": "latest",
-    "gulp-minify-css": "latest",
+    "gulp-clean-css": "latest",
     "gulp-uglify": "latest",
     "browser-sync": "latest"
   }
